<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:weimain="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.MainActivity">
    <!--显示主要内容-->
    <com.yhzhcs.dispatchingsystemjzfp.view.MyViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </com.yhzhcs.dispatchingsystemjzfp.view.MyViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/tab_bg"
        android:orientation="horizontal">

        <com.yhzhcs.dispatchingsystemjzfp.view.ChangeIcon
            android:id="@+id/id_changeicon_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            weimain:color="@color/colorTitle"
            weimain:icon="@mipmap/icon_home"
            weimain:text="@string/fragment_home"
            weimain:text_size="12sp" />

        <com.yhzhcs.dispatchingsystemjzfp.view.ChangeIcon
            android:id="@+id/id_changeicon_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            weimain:color="@color/colorTitle"
            weimain:icon="@mipmap/icon_information"
            weimain:text="@string/fragment_information"
            weimain:text_size="12sp" />

        <com.yhzhcs.dispatchingsystemjzfp.view.ChangeIcon
            android:id="@+id/id_changeicon_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            weimain:color="@color/colorTitle"
            weimain:icon="@mipmap/icon_task"
            weimain:text="@string/fragment_task"
            weimain:text_size="12sp" />

        <com.yhzhcs.dispatchingsystemjzfp.view.ChangeIcon
            android:id="@+id/id_changeicon_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            weimain:color="@color/colorTitle"
            weimain:icon="@mipmap/icon_my"
            weimain:text="@string/fragment_personal"
            weimain:text_size="12sp" />

    </LinearLayout>
</LinearLayout>
