<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_poor_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activitys.PoorDetailsActivity">

    <include
        layout="@layout/activity_title"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        app:layout_heightPercent="12%w"
        />

    <LinearLayout
        android:id="@+id/bottomlinear"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorWil"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_first"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="-5dp"
            android:text="@string/poor_details_title_basic"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_second"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/poor_details_title_family"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_third"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/poor_details_title_income"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/poor_details_title_img"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cursorarea"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#CDCDCD"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cursor_btn"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/myviewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="12">

    </android.support.v4.view.ViewPager>

</com.zhy.android.percent.support.PercentLinearLayout>
